# fluid-simulation

./: .gitattributes  .gitignore  README.md  thoughts.md
app/: Cargo.toml  cf-build.sh  local_dev.sh  run.sh  rust-toolchain.toml
app/crates/fluid-lab/: Cargo.toml
app/crates/fluid-lab/src/: camera.rs  lib.rs  timestep.rs
app/crates/fluid-lab/src/gpu/: blit.rs  caustics.rs  composite.rs  diffuse.rs  environment.rs  fluid.rs  mesh.rs  mod.rs  particles.rs  renderer.rs  skybox.rs  slice.rs  smoke.rs  smoothing.rs  temporal.rs  timing.rs  wallfill.rs  wetwall.rs
app/crates/fluid-lab/src/gpu/shaders/: blit.wgsl  blur.wgsl  boundaries.wgsl  caustics_composite.wgsl  caustics_generate.wgsl  cg_alpha.wgsl  cg_beta.wgsl  cg_dir.wgsl  cg_init.wgsl  cg_reduce.wgsl  cg_reduce_final.wgsl  cg_set_rsold.wgsl  cg_spmv.wgsl  cg_update.wgsl  classify.wgsl  clear.wgsl  composite.wgsl  density.wgsl  diffuse_emit.wgsl  diffuse_render.wgsl  diffuse_update.wgsl  divergence.wgsl  env.wgsl  environment.wgsl  forces.wgsl  g2p.wgsl  gradient.wgsl  impulse.wgsl  mark.wgsl  mc.wgsl  mc_args.wgsl  mesh.wgsl  normalize.wgsl  particles.wgsl  pressure.wgsl  save_vel.wgsl  scatter.wgsl  scatter_local.wgsl  skybox.wgsl  slice.wgsl  (+9 more)
app/crates/fluid-lab/src/profiler/: mod.rs
app/crates/fluid-lab/src/scene/: mod.rs
app/crates/fluid-lab/src/settings/: mod.rs
app/crates/fluid-lab/src/sim/: marching_cubes.rs  mod.rs  pressure.rs
app/tools/: boot_cubic.png.console.txt  boot_rect.png.console.txt  capture.mjs  export_sequence.mjs  (+12 more)
docs/: index.md  overview.md  ownership.md  repository-layout.md
(+114 files in other folders)
