[package]
name = "fluid-lab"
version = "1.1.0"
edition = "2021"
description = "Browser-native Rust/WASM/WebGPU 3D fluid lab"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "29"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
futures-channel = "0.3"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "Navigator",
    "Gpu",
    "Performance",
]

# Tests run native (host) — only the indexing/math helpers are exercised here.
# The wgpu/web-sys paths are wasm-only and excluded from native test builds.
